# MIBBS

./: Makefile.am  Makefile.in  README  configure  configure.ac  format916.tex  masterscript.sh  plot.tex  script3.sh
cluster/: ExprPredictor.cpp  ExprPredictor.h  Makefile.in  README  Tools.cpp  seq2exp.cpp  twmotifs842014.wtmx
cluster/Data/: minfo.txt  minfo.txt~
data_dir/: ExprPredictor.cpp  ExprPredictor.h  Makefile.in  README  Tools.cpp  Tools.h  cbe.fa  coreOPT0cb1.txt  coredc1OPT1.txt  coredu1OPT1.txt  du.txt  pwm.txt  rcRead2.txt  seq2exp.cpp
data_dir2/: rcRead.txt  rcRead2.txt
logodds/: Ebox.txt  ExprPredictor.cpp  ExprPredictor.h  Makefile.am  Makefile.in  README  Tools.cpp  Tools.h  TwistCondit.txt  cbe.fa  coreOPT0dc1.txt  logoddsPredpval.m  seq2exp.cpp  twmotifs.wtmx  usw.m
miclasses/: Eboxn.txt  ExprPredictor.cpp  ExprPredictor.h  Makefile.in  README  Tools.cpp  cdfwchannelfptw.m  coreOPT0du1.txt  miclasses.eps  seq2exp.cpp  seqtest.txt  t.sh  twmotifsn.wtmx
rocenhancer/: ExprPredictor.cpp  ExprPredictor.h  Makefile.am  Makefile.in  README  channelinputoutput.m  rocdiff.m  seq2exp.cpp
rocproj/: Eboxn.txt  ExprPredictor.cpp  ExprPredictor.h  Makefile.in  README  Tools.cpp  roc.m  seq2exp.cpp
